--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.428.0",
+    "next": "14.2.5",
+    "next-intl": "^3.17.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "rtl-detect": "^1.1.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
